# bbcstyle

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py  theme.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs_improvement.md  feature_request.md
.github/workflows/: publish.yml
bbcstyle/: finalise_plot.py  theme.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
example/: example_plots.ipynb
examples/gallery/: 01_bar_chart.py  02_line_chart.py  03_scatter_plot.py  04_histograms.py  05_bubble_scatter.py
