[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "bbcstyle"
version = "0.1.0"
description = "BBC-inspired Matplotlib/Seaborn theme for clean, publication-ready charts."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "ale-tom" }]
keywords = ["matplotlib", "seaborn", "theme", "visualization", "bbc"]
dependencies = [
  "matplotlib>=3.5",
  "seaborn>=0.12"
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization"
]

[project.urls]
Homepage = "https://github.com/ale-tom/bbcstyle"
Issues = "https://github.com/ale-tom/bbcstyle/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bbcstyle*"]

[tool.setuptools.package-data]
"bbcstyle" = ["assets/*"]
